--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Attended Smart Attendance system</title>
 </head>
 <body class="bg-blue-300">
-    <div class="flex w-[100%] h-screen justify-center items-center content-center relative">
+    <div class="flex w-[100%] my-[3rem] h-screen justify-center items-center content-center relative">
         <div class="lg:w-1/3 2xl:w-1/4 w-[75%] p-10 bg-white text-center rounded-xl flex flex-col justify-center align-center shadow-lg shadow-slate-500">
             <div class="bg-yellow-100 rounded-xl shadow-lg shadow-slate-400 w-[8rem] h-auto text-2xl font-bold mx-auto text-sky-600 text-center">
                 Attend<span class="text-orange-600">Ed</span>
@@ -100,4 +100,5 @@
         }
     </script>
 </body>
+
 </html>
