--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 Attend<span class="text-orange-600">Ed</span>
             </div>                                        
             <div class="mb-7">
-                <h2 class="text-4xl font-bold text-blue-800 mt-2">School Attendance</h2>
+                <h2 class="sm:text-4xl text-3xl font-bold text-blue-800 mt-2">School Attendance</h2>
                 <h4 class="mt-1">Smart Attendance Management</h4>
             </div>
             <div class="flex flex-col relative overflow-hidden mt-2">
@@ -100,4 +100,5 @@
         }
     </script>
 </body>
+
 </html>
