--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <title>Attended Smart Attendance system</title>
 </head>
 <body class="bg-blue-300">
-    <div class="flex w-[100%] min-h-screen my-[3rem] sm:my-0 justify-center items-center content-center relative px-4">
-        <div class="lg:w-1/3 2xl:w-1/4 w-[95%] p-10 bg-white text-center rounded-xl flex flex-col justify-center align-center shadow-lg shadow-slate-500">
+    <div class="flex w-[100%] min-h-screen sm:my-0 justify-center items-center content-center relative px-4">
+        <div class="lg:w-1/3 2xl:w-1/4 w-[95%] my-[3rem] p-10 bg-white text-center rounded-xl flex flex-col justify-center align-center shadow-lg shadow-slate-500">
             <div class="bg-yellow-100 rounded-xl shadow-lg shadow-slate-400 w-[8rem] h-auto text-2xl font-bold mx-auto text-sky-600 text-center">
                 Attend<span class="text-orange-600">Ed</span>
             </div>                                        
             <div class="mb-7">
                 <h2 class="sm:text-4xl text-3xl font-bold text-blue-800 mt-2">School Attendance</h2>
-                <h4 class="mt-1">Smart Attendance Management</h4>
+                <h4 class="mt-1 text-sm sm:text-base">Smart Attendance Management</h4>
             </div>
             <div class="flex flex-col relative overflow-hidden mt-2">
                 <form id="signin" action="" class="flex flex-col space-y-1 relative w-full left-[0]">
@@ -102,3 +102,4 @@
 </body>
 
 </html>
+
