--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <div class="flex flex-col relative overflow-hidden mt-2">
                 <form id="signin" action="" class="flex flex-col space-y-1 relative w-full left-[0]">
                 <label for="email" class="text-sm font-medium text-start pb-0.5 mt-2">Email</label>
-                <input type="email" placeholder="Enter your email" class="block border rounded-lg px-2 py-2 bg-blue-100 border-slate-400 hover:bg-blue-50" required>
+                <input type="email" placeholder="Enter your email" class="block border rounded-lg px-2 py-2 bg-blue-100 border-slate-400 hover:bg-blue-50 focus:bg-blue-50" required>
                 <label for="password" class="text-sm font-medium text-start pb-0.5 mt-2">Password</label>
-                <input type="password" placeholder="Enter your password" class="block border rounded-lg px-2 py-2 bg-blue-100 border-slate-400 hover:bg-blue-50" required>
+                <input type="password" placeholder="Enter your password" class="block border rounded-lg px-2 py-2 bg-blue-100 border-slate-400 hover:bg-blue-50 focus:bg-blue-50" required>
 
                 <div class="flex justify-between text-sm items-center my-5">
                     <label class="flex items-center" for="">
@@ -50,13 +50,13 @@
             
             <form id="signup" action="" class="flex flex-col space-y-1 absolute w-full h-auto left-[100%] overflow-hidden">
                 <label for="name" class="text-sm font-medium text-start pb-0.5 mt-2">Name</label>
-                <input type="text" placeholder="Enter your name" class="block border rounded-lg px-2 py-2 bg-blue-100 border-slate-400 hover:bg-blue-50" required>
+                <input type="text" placeholder="Enter your name" class="block border rounded-lg px-2 py-2 bg-blue-100 border-slate-400 hover:bg-blue-50 focus:bg-blue-50" required>
                 <label for="email" class="text-sm font-medium text-start pb-0.5 mt-2">Email</label>
-                <input type="email" placeholder="Enter your email" class="block border rounded-lg px-2 py-2 bg-blue-100 border-slate-400 hover:bg-blue-50" required>
+                <input type="email" placeholder="Enter your email" class="block border rounded-lg px-2 py-2 bg-blue-100 border-slate-400 hover:bg-blue-50 focus:bg-blue-50" required>
                 <label for="password" class="text-sm font-medium text-start pb-0.5 mt-2">Password</label>
-                <input type="password" placeholder="Enter your password" class="block border rounded-lg px-2 py-2 bg-blue-100 border-slate-400 hover:bg-blue-50" required>
+                <input type="password" placeholder="Enter your password" class="block border rounded-lg px-2 py-2 bg-blue-100 border-slate-400 hover:bg-blue-50 focus:bg-blue-50" required>
                 <label for="confirm_password" class="text-sm font-medium text-start pb-0.5 mt-2">Confirm Password</label>
-                <input type="password" placeholder="Repeat password" class="block border rounded-lg px-2 py-2 bg-blue-100 border-slate-400 hover:bg-blue-50" required>
+                <input type="password" placeholder="Repeat password" class="block border rounded-lg px-2 py-2 bg-blue-100 border-slate-400 hover:bg-blue-50 focus:bg-blue-50" required>
 
                 <div class="flex justify-between text-sm items-center my-2">
                     <label class="flex items-center" for="">
@@ -102,6 +102,7 @@
 </body>
 
 </html>
+
 
 
 
