--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 Attend<span class="text-orange-600">Ed</span>
             </div>                                        
             <div class="mb-7">
-                <h2 class="sm:text-4xl text-3xl font-bold text-blue-800 mt-2">School Attendance</h2>
-                <h4 class="mt-1 text-sm sm:text-base">Smart Attendance Management</h4>
+                <h2 class="sm:text-4xl text-3xl font-bold text-blue-800 mt-2">School Attendance & Rewards</h2>
+                <h4 class="mt-1 text-sm sm:text-base">Smart attendance management with rewards system</h4>
             </div>
             <div class="flex flex-col relative overflow-hidden mt-2">
                 <form id="signin" action="" class="flex flex-col space-y-1 relative w-full left-[0]">
@@ -131,4 +131,5 @@
 
     </script>
 </body>
+
 </html>
