--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="bg-gradient-to-br from-blue-400 to-purple-600 min-h-screen">
     <div class="flex w-[100%] min-h-screen sm:my-0 justify-center items-center content-center relative px-4">
         <div class="lg:w-1/3 2xl:w-1/4 w-[95%] mt-3 mb-3 p-10 bg-white text-center rounded-xl flex flex-col justify-center align-center shadow-lg shadow-slate-500">
-            <div class="rounded-xl shadow-lg shadow-slate-400 w-[10rem] h-auto text-3xl font-bold mx-auto text-sky-600 text-center">
+            <div class="w-[10rem] h-auto text-3xl font-bold mx-auto text-sky-600 text-center">
                 Attend<span class="text-orange-600">Ed</span>
             </div> 
             <div class="flex justify-center items-center my-4">
@@ -136,4 +136,5 @@
 
     </script>
 </body>
+
 </html>
